# typani

./: .gitignore  Makefile  README.md  frob.toml  mypy-py310.ini  pyproject.toml  tickets.md
design/: typani.strata
docs/: design.md  dispatch.md  error_set.md  index.md  option.md  result.md  singleton.md  sum.md  unit.md  unreachable.md
examples/: error_sets.py  pipeline.py  singletons.py  sum_dispatch.py
src/typani/: __init__.py  dispatch.py  error_set.py  option.py  result.py  singleton.py  singleton.pyi  sum.py  unit.py  unreachable.py
tests/: test_build.py  test_dispatch.py  test_error_set.py  test_error_set_result.py  test_operators.py  test_option.py  test_result.py  test_singleton.py  test_singleton_decorator.py  test_singleton_model.py  test_sum.py  test_unit.py  test_unreachable.py
tickets/: T-0001-frob-graph-builder-crashes-on-overload-chains-singleton-py-excluded.md  T-0002-reconcile-ty-diagnostics-with-mypy-baseline-frob-check-skip-ty-active.md
